--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
 		"angular-resource": "~1.3.0",
 		"json2": "*",
 		"jquery": "1.11.2",
+		"underscore": "1.8.3",
 		"jasmine": "2.0.1",
 		"jasmine-reporters": "2.0.3"
 	}
