--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
         "karma": "~0.12.0",
         "karma-jasmine": "~0.2.0",
         "karma-junit-reporter": "^0.2.2",
+        "karma-chrome-launcher": "*",
+        "karma-firefox-launcher": "*",
+        "karma-jasmine": "*",
+        "karma-junit-reporter": "*",
         "bower": "1.3.9",
         "http-server": "^0.7.4",
         "jshint": "2.5.3",
@@ -22,6 +26,9 @@
 
         "pretest": "npm install",
         "test": "./node_modules/karma/bin/karma start karma.conf.js",
-        "test-single-run": "karma start karma.conf.js  --single-run"
+        "test-single-run": "karma start karma.conf.js  --single-run",
+
+        "preupdate-webdriver": "npm install",
+        "update-webdriver": "webdriver-manager update"
     }
 }
