--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "bower": "1.3.9",
         "http-server": "^0.7.4",
         "jshint": "2.5.3",
-        "uglify-js": "~2.4.15"
-    },
-    "dependencies": {
-
+        "uglify-js": "~2.4.15",
+        "grunt": "~0.4.5",
+        "grunt-cli": "0.1.13",
+        "grunt-contrib-jshint": "~0.10.0",
+        "grunt-contrib-nodeunit": "~0.4.1",
+        "grunt-contrib-uglify": "~0.5.0"
     },
     "scripts": {
         "postinstall": "bower install",
