--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "grunt": "~0.4.5",
         "grunt-cli": "0.1.13",
         "grunt-contrib-jshint": "~0.10.0",
+        "grunt-contrib-cssmin": "0.12.2",
         "grunt-contrib-nodeunit": "~0.4.1",
         "grunt-contrib-uglify": "~0.5.0"
     },
